--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Obviamente, os arquivos ainda estão em produção e irão sofrer muitas alterações, espero torná-los cada vez melhores :3
                 
                 <h4>Documentação oficial: <a href="docs/Behind Shadows GDD.pdf">Game Design Document (GDD)</a> (última alteração: 21/02/2025)</h4>
-                <h4>História antiga parcial via site (melhor visualização, mas um pouco desatualizada): <a href="web/story-view/story-view.html"> história 4ª revisão via site</a> (última atualização em 07/08/2024) </h4>
+                <h4>História parcial via site (melhor visualização, mas muito incompleta — estou trabalhando nisso :3 ): <a href="story-view/story-view.html"> história refatorada via site</a> (última atualização em 03/07/2025) </h4>
                 <h4>História antiga parcial via txt (mais atualizado até o momento): <a href="docs/roteiros/olds/REV-5/pt-br/roteiro_full%5BREV%20-5%5D.txt">história revisão 5 via txt</a> (última atualização: 17/03/2025 00:11 [GMT-3])</h4>
                 <h4>Notas de desenvolvimento (confira o que estou pensando agora. Esse arquivo é atualizado toda vez que trabalho no jogo, volte de vez em quando pra dar uma olhada :) ): <a href="docs/registros/notas_de_desenvolvimento.txt">notas de desenvolvimento</a> (última atualização: 20/04/2025 - 22:21 [GMT-3])</h4>  
             </div>
