--- a/story-view/index.html
+++ b/story-view/index.html
@@ -25,6 +25,10 @@
       <div id="main-content" class="max-w-4xl mx-auto"></div>
     </main>
   </div>
+  <div class="horario-box">
+      <i class="fa-solid fa-clock"></i>
+      <span>08 - 12h</span>
+  </div>
   <div id="templates" class="hidden">
     <div id="home-template">
       <div class="text-center p-8 bg-stone-800 rounded-lg shadow-lg content-fade-in border border-stone-700">
