--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta charset="utf-8">
       <meta name="google-site-verification" content="ZbIYxglyuLj4R3ALG7r-TEp4Fi5bMsxpYVfx2GW4aN8" />
       <meta name="description" content="Dois garotos, uma vida após a morte e um exército de corrompidos para enfrentar. Embarque nesta aventura cheia de ação e magia e guie-os em sua jornada!">
-      <link rel="canonical" href="https://fabriciofkt157.me/Behind-Shadows/" />
+      <link rel="canonical" href="https://behind.fabriciofkt157.me/" />
       <link rel="preload" href="web/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
       <noscript><link rel="stylesheet" href="web/style.css"></noscript>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
