--- a/story-view/index.html
+++ b/story-view/index.html
@@ -50,7 +50,7 @@
             <img class="w-32 h-32 rounded-2xl border-4 border-stone-600 object-cover flex-shrink-0 bg-stone-700" src="{image_url}" alt="Retrato de {title}">
             <div class="flex-grow">
               <h2 class="text-4xl text-sky-200 font-title">{title}</h2>
-              <p class="text-sky-300 font-semibold mb-4 text-lg">"{subtitle}"</p>
+              <p class="text-sky-300 font-semibold mb-4 text-lg subtitle-field">{subtitle}</p>
               <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-6 gap-y-3 text-sm text-stone-300">
                 {details_grid}
               </div>
