--- a/index.html
+++ b/index.html
@@ -129,6 +129,31 @@
         </div>
     </section>
 
+    <section id="feedback-section" class="py-20 px-4">
+    <div class="text-center mb-16">
+        <h2 class="font-exo text-4xl md:text-5xl font-black mb-4 uppercase">Envie seu <span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-yellow-500">Feedback</span></h2>
+        <p class="text-lg text-gray-400 max-w-3xl mx-auto">
+           Encontrou um bug? Tem alguma sugestão? Adoraria ouvir sua opinião!
+        </p>
+    </div>
+
+    <div class="max-w-2xl mx-auto">
+        <form action="https://formspree.io/f/SUA_URL_AQUI" method="POST" class="space-y-6">
+            <div>
+                <label for="email" class="font-exo text-sm font-bold text-gray-300">Seu E-mail (Opcional)</label>
+                <input type="email" name="email" id="email" class="form-input" placeholder="voce@email.com">
+            </div>
+            <div>
+                <label for="message" class="font-exo text-sm font-bold text-gray-300">Sua Mensagem</label>
+                <textarea name="message" id="message" rows="5" class="form-input" placeholder="Deixe seu feedback aqui..." required></textarea>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="cta-button bg-pink-500/20 text-pink-300 font-bold py-3 px-12 rounded-full w-full md:w-auto border border-pink-500/50">Enviar Feedback</button>
+            </div>
+        </form>
+    </div>
+</section>
+
     <footer class="text-center py-8 border-t border-gray-800">
         <p class="text-gray-500">&copy; 2025 Behind Shadows. Desenvolvido por Fabricio Keltika Tanquella.</p>
     </footer>
