--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <!-- Card Download Jogo -->
             <div class="download-card flex flex-col items-center justify-between">
                 <h3 class="font-exo text-2xl font-bold text-green-400 mb-2">Download do Jogo</h3>
-                <p class="text-gray-400 mb-6 flex-grow">Acesse a build mais recente (v0.0.0.1 teste de desenvolviment ).
+                <p class="text-gray-400 mb-6 flex-grow">Acesse a build mais recente (v0.0.4.1-dev).
                 </p>
                 <a href="#"
                     class="cta-button bg-green-500/20 text-green-300 font-bold py-3 px-8 rounded-full w-full border border-green-500/50">Baixar
