--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h3 class="font-exo text-2xl font-bold text-green-400 mb-2">Download do Jogo</h3>
                 <p class="text-gray-400 mb-6 flex-grow">Acesse a build mais recente (v0.0.4.1-dev).
                 </p>
-                <a href="#"
+                <a href="https://drive.google.com/file/d/1Ssc6r-y-EKCVBQ8WLSl5DLaV2A0Zyl-4/view?usp=sharing"
                     class="cta-button bg-green-500/20 text-green-300 font-bold py-3 px-8 rounded-full w-full border border-green-500/50">Baixar
                     Agora</a>
             </div>
