--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h3 class="font-exo text-2xl font-bold text-green-400 mb-2">Download do Jogo</h3>
                 <p class="text-gray-400 mb-6 flex-grow">Acesse a build mais recente (v0.0.4.1-dev).
                 </p>
-                <a href="https://drive.google.com/file/d/1Ssc6r-y-EKCVBQ8WLSl5DLaV2A0Zyl-4/view?usp=sharing"
+                <a href="https://github.com/Fabriciofkt157/Behind-Shadows/releases/tag/v0.0.4.1"
                     class="cta-button bg-green-500/20 text-green-300 font-bold py-3 px-8 rounded-full w-full border border-green-500/50">Baixar
                     Agora</a>
             </div>
@@ -113,7 +113,7 @@
             <div class="download-card flex flex-col items-center justify-between">
                 <h3 class="font-exo text-2xl font-bold text-yellow-400 mb-2">Changelogs</h3>
                 <p class="text-gray-400 mb-6 flex-grow">Veja o que há de novo e as correções de cada versão.</p>
-                <a href="#"
+                <a href="https://github.com/Fabriciofkt157/Behind-Shadows/releases"
                     class="cta-button bg-yellow-500/20 text-yellow-300 font-bold py-3 px-8 rounded-full w-full border border-yellow-500/50">Ver
                     Registros</a>
             </div>
