--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 <body class="antialiased">
 
     <nav>
-        <ul class="nav">
+          <ul class="nav">
             <li class="nav"><a href="https://github.com/Fabriciofkt157">Fabriciofkt157</a></li>
-            <li class="nav"><a href="#">Projetos</a></li>
-        </ul>
-        
+            <li class="nav"><a href="https://github.com/Fabriciofkt157">Projetos</a></li>
+          </ul>
     </nav>
 
     <header class="min-h-screen animated-gradient flex flex-col justify-center items-center text-center p-4">
