--- a/story-view/index.html
+++ b/story-view/index.html
@@ -79,5 +79,8 @@
 </div>
   </div>
   <script src="js/app.js" type="module"></script>
+  
+  <script src="https://unpkg.com/@popperjs/core@2"></script>
+  <script src="https://unpkg.com/tippy.js@6"></script>
 </body>
 </html>
